deployment/loadgen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loadgen
  name: loadgen
spec:
  replicas: 3  # Set the number of replica pods here
  selector:
    matchLabels:
      app: loadgen
  template:
    metadata:
      labels:
        app: loadgen
    spec:
      containers:
        - name: loadgen
          image: gcr.io/dynatrace-demoability/easytrade/loadgen:151f288
          imagePullPolicy: Always
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "500m"
