deployment/credit-card-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-card-order-service
  labels:
    owner: team-payments
  annotations:
    owner: team-payments
spec:
  selector:
    matchLabels:
      app: credit-card-order-service
  template:
    metadata:
      labels:
        app: credit-card-order-service
        owner: team-payments
    spec:
      containers:
        - name: credit-card-order-service
          image: gcr.io/dynatrace-demoability/easytrade/credit-card-order-service:151f288
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 350Mi
---
apiVersion: v1
kind: Service
metadata:
  name: credit-card-order-service
spec:
  type: ClusterIP
  selector:
    app: credit-card-order-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
