deployment/frontendreverseproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendreverseproxy
  labels:
    owner: team-frontend
spec:
  selector:
    matchLabels:
      app: frontendreverseproxy
  template:
    metadata:
      labels:
        app: frontendreverseproxy
        owner: team-frontend
    spec:
      containers:
        - name: frontendreverseproxy
          image: gcr.io/dynatrace-demoability/easytrade/frontendreverseproxy:151f288
          ports:
            - containerPort: 80
          env: []
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 60Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontendreverseproxy-easytrade
spec:
  type: LoadBalancer
  selector:
    app: frontendreverseproxy
  ports:
    - name: easytrade-frontend
      port: 80
      targetPort: 80
